--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     --cinza-secundario: #838383;
     --cor-de-fundo: #151515;
     --cor-de-fundo-secundaria: #202020;
-    --cor-botao: #0eba1f;
+    --cor-botao: #0e8a1f;
 }
 
 *{
@@ -14,13 +14,14 @@
 body{
     background-color: var(--cor-de-fundo);
     color: var(--branco-principal);
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 .container__titulo{
     display: flex;
     justify-content: center;
     margin: 15px 0;
-    font-size: 48px;
+    font-size: 42px;
 }
 
 .container__primario{
@@ -28,7 +29,6 @@ body{
     padding: 20px;
     margin: 40px;
     border-radius: 5px;
-    box-shadow: 2px 2px 10px rgba(255, 255, 255, 0.8);
     margin-bottom: 20px;
 }
 
@@ -61,7 +61,7 @@ body{
     flex-direction: column;
     padding: 10px;
     box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.5);
-    border-radius: 10px;
+    border-radius: 5px;
     margin: 10px 0 0 0;
     width: 450px;
 }
@@ -71,16 +71,16 @@ body{
 }
 
 .descricao__drone{
-    font-size: 26px;
+    font-size: 1.1rem;
 }
 
 .link__drone{
     text-decoration: none;
-    color: var(--cinza-secundario);
+    color: var(--cor-botao);
 }
 
 .link__drone:hover{
-    color: #2b70e0;
+    --cor-botao: #00cc14;
 }
 
 .descricao__drone{
@@ -93,7 +93,7 @@ body{
     flex-direction: column;
     padding: 10px;
     box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.5);
-    border-radius: 10px;
+    border-radius: 5px;
     margin: 10px 0 0 0;
     width: 450px;
 }
@@ -103,7 +103,7 @@ body{
 }
 
 .titulo__caracteristicas{
-    font-size: 26px;
+    font-size: 1.25rem;
     font-weight: bold;
 }
 
@@ -119,7 +119,7 @@ body{
     display: block;
     padding: 10px;
     margin-top: 20px;
-    border-radius: 10px;
+    border-radius: 8px;
     width: 200px;
     text-align: center;
     font-size: 22px;
@@ -127,6 +127,6 @@ body{
 }
 
 .container__botao a:hover{
-    background-color: #0e8a1f;
+    background-color: #00cc14;
     transform: scale(1.05);
 }
